--- a/PR/workingBrain_PR_Main.Rmd
+++ b/PR/workingBrain_PR_Main.Rmd
@@ -34,11 +34,12 @@ abstract: |
 
 
   
-version           : "Version 2, 16th October 2020."
+version           : "Version 2, 20th October 2020."
 keywords          : "UK Biobank; Occupational factors; Work; Employment; fMRI; rsMRI; Interoception; Inflammation; Cytokine; Immune function."
 wordcount         : "X"
 bibliography      : workingBrain.bib
 
+figsintext        : yes
 floatsintext      : no
 figurelist        : no
 tablelist         : no
@@ -81,4 +82,6 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
 
 \newpage
+
+\hspace{1cm}
 
